# six-hats-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_env.py  start.ps1  start.sh
app/: __init__.py  hats.py  main.py
tests/: __init__.py  test_mcp_tools.py
