[tool.poetry]
name = "six_hats_mcp"
version = "0.1.0"
description = "Six Thinking Hats via FastMCP & OpenAI Agents SDK"
authors = ["Danejw <github.com/Danejw>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
fastmcp = {git = "https://github.com/jlowin/fastmcp.git", rev = "main"}
openai-agents = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
